Add k-HDTCat to HDTCat-Tree with profiling